src/test/resources/trialFiles/invalid/syntaxErr/ifNoElseBadReturn.wacc
# no return after fi

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int f() is
    int x = 3;
    if x == 3
    then
      x = x + 1;
      return x;
    fi;
  end

  int i = call f();
  print i
end
